istio/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - name: db
      protocol: TCP
      port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres-account
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: postgres-k8s-persistence
              mountPath: /var/lib/postgresql/data
            - name: config
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init_database.sql
      volumes:
        - name: postgres-k8s-persistence
        - name: config
          configMap:
            name: postgres-initsql
